--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   meta: ^1.7.0
   photo_manager: ^2.0.7
   provider: ^6.0.1
-  video_player: ^2.2.14
+  cached_video_player: ^2.0.3
 
 dev_dependencies:
   flutter_test:
